<?xml version="1.0"?>
<project
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
        xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>bdp-dht</artifactId>
        <groupId>cn.wonhigh.dc.client</groupId>
        <version>2.0.0</version>
    </parent>
    <groupId>${project.parent.groupId}</groupId>
    <artifactId>bdp-dht-zmanager</artifactId>
    <version>${project.parent.version}</version>
    <name>bdp-dht-zmanager</name>
    <url>http://maven.apache.org</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
    </properties>
    <dependencies>

        <!-- https://mvnrepository.com/artifact/com.cloudera/ImpalaJDBC4 -->
        <dependency>
            <groupId>com.cloudera</groupId>
            <artifactId>ImpalaJDBC4</artifactId>
            <version>2.5.42</version>
        </dependency>


        <dependency>
            <groupId>cn.wonhigh</groupId>
            <artifactId>base-framework-manager</artifactId>
            <version>${base.version}</version>
        </dependency>
        <dependency>
            <groupId>cn.wonhigh.dc.client</groupId>
            <artifactId>bdp-dht-service</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>cn.wonhigh.dc.client</groupId>
            <artifactId>bdp-dht-sqoop</artifactId>
            <version>${project.version}</version>
        </dependency>


    </dependencies>

    <build>
        <finalName>bdp-dht</finalName>
        <plugins>
            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-eclipse-plugin</artifactId>-->
            <!--<configuration>-->
            <!--<downloadSources>true</downloadSources>-->
            <!--<wtpversion>2.0</wtpversion>-->
            <!--</configuration>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <mainClass>cn.wonhigh.dc.client.manager.bootstrap.StartMain</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <!-- This is to inject hadoop etc configuration dir into classpath for Hadoop ecosystem!
                    *  As for DSF client, if not add this directory into classpath, hadoop would have some issues
                    *  like kerberos, capacity schedule queue configuration, etc.
                    *  See http://grokbase.com/t/cloudera/scm-users/1342vp3h8k/unable-to-run-third-party-application-accessing-hdfs-because-kerberos-security-for-hadoop-is-on
                    -->
                    <configurationDirectory>/etc/wonhighconf/dc/hadoop</configurationDirectory>
                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
                    <copyConfigurationDirectory>false</copyConfigurationDirectory>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <extraJvmArguments>-Xms4048m -Xmx4048m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError
                        -XX:HeapDumpPath=/data/logs/wonhigh/dc/client/crash/heap_bdp-dht_pid%p.hprof
                        -XX:ErrorFile=/data/logs/wonhigh/dc/client/crash/jvm_bdp-dht_pid%p.log
                    </extraJvmArguments>
                    <binFileExtensions>
                        <unix>.sh</unix>
                    </binFileExtensions>
                    <platforms>
                        <platform>windows</platform>
                        <platform>unix</platform>
                    </platforms>
                    <repositoryName>lib</repositoryName>
                    <programs>
                        <program>
                            <mainClass>cn.wonhigh.dc.client.manager.bootstrap.StartMain</mainClass>
                        </program>
                    </programs>
                    <repositoryLayout>flat</repositoryLayout>
                </configuration>
                <executions>
                    <execution>
                        <id>make-start-file</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>make-zip</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/resources/assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/rebel.xml</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>
